added bulk prices, banners and removed user_customisation_options
1. Updated Product Create and Update routes to also have the option to add bulk quantity prices
it is a dictionary nested within a list having quantities as keys and prices as values

2. In Featured section added routes for adding, updating, getting and deleting banners

3. Removed the user_customization_options field from category and updated category creation and updation routes accordingly

--- a/template.yaml
+++ b/template.yaml
@@ -59,6 +59,11 @@ Resources:
     Type: AWS::Serverless::Api
     Properties:
       StageName: "Prod"
+      BinaryMediaTypes:
+        - image/jpeg
+        - image/png
+        - application/octet-stream
+        - image/webp
       GatewayResponses:
         DEFAULT_4XX:
           ResponseParameters:
